--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Time to time there will be new entries in the website specially for skills and b
     
     </p>
     <p>
-        <a href="public/cssDesign.html"><button style="font-weight: bold;" type="button" class="btn btn-outline-dark">Design</button></a>
+        <a href="https://rahul-dell.github.io/Dice-Game/"><button style="font-weight: bold;" type="button" class="btn btn-outline-dark">Dice Game</button></a>
     
     </p>
     <p>
