--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@ Time to time there will be new entries in the website specially for skills and b
 
 
 <p>Below are the bunch of projects links, I have created on my own</p>
+        
+    </p>
+    <p><marquee direction="center" style="color: red; width: 40%;"><h5>Dice Game: My Favourite</h5></marquee>
+
+    </p>
 <div class ="grid_projects">
     <p>
         <a href="public/movieR.html"><button style="font-weight: bold;" type="button" class="btn btn-outline-dark">Movie Ranking</button></a>
@@ -79,10 +84,6 @@ Time to time there will be new entries in the website specially for skills and b
     <p>
         <a href="index.html"><button style="font-weight: bold;" type="button" class="btn btn-outline-dark">Previous Portfolio</button></a>
     
-    </p>
-    <p><marquee direction="center" style="color: red; width: 40%;"><h5>My Favourite</h5></marquee>
-
-    </p>
 </div>
 <br>
 <div class ="Conntact Me">
