--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@ Time to time there will be new entries in the website specially for skills and b
     </p>
     <p>
         <a href="index.html"><button style="font-weight: bold;" type="button" class="btn btn-outline-dark">Previous Portfolio</button></a>
+    </p>
+     <p>
+        <a href="https://rahul-dell.github.io/Piano/"><button style="font-weight: bold;" type="button" class="btn btn-outline-dark">Piano</button></a>
+    </p>
     
 </div>
 <br>
