--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ Time to time there will be new entries in the website specially for skills and b
      <p>
         <a href="https://rahul-dell.github.io/Piano/"><button style="font-weight: bold;" type="button" class="btn btn-outline-dark">Piano</button></a>
     </p>
+     <p>
+        <a href="https://rahul-dell.github.io/Simon-Game/"><button style="font-weight: bold;" type="button" class="btn btn-outline-dark">Simon Game</button></a>
+    </p>
     
 </div>
 <br>
